scores by school type.

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -5271,7 +5271,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "accf22da",
+   "id": "f9515781",
    "metadata": {},
    "outputs": [
     {
@@ -5310,7 +5310,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "6c4e02cf",
+   "id": "034deb5b",
    "metadata": {},
    "outputs": [
     {
@@ -5349,7 +5349,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "d5f9b098",
+   "id": "11990f6c",
    "metadata": {},
    "outputs": [
     {
@@ -5376,7 +5376,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "976a05f3",
+   "id": "118f4af8",
    "metadata": {},
    "outputs": [
     {
@@ -5403,7 +5403,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "566e6a75",
+   "id": "44194c8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5415,7 +5415,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "dcf604bc",
+   "id": "ca117b0f",
    "metadata": {},
    "outputs": [
     {
@@ -5753,7 +5753,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "84ecfe53",
+   "id": "0618e617",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5772,7 +5772,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "b24dd739",
+   "id": "deebca64",
    "metadata": {},
    "outputs": [
     {
@@ -5798,7 +5798,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "b2b51ac4",
+   "id": "9965e029",
    "metadata": {},
    "outputs": [
     {
@@ -5917,7 +5917,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "67177ed7",
+   "id": "9568929b",
    "metadata": {},
    "outputs": [
     {
@@ -6039,7 +6039,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "1aa789b3",
+   "id": "5f484ae1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6051,7 +6051,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "72e2679f",
+   "id": "5b9ae57c",
    "metadata": {},
    "outputs": [
     {
@@ -6215,7 +6215,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "f0a14ae2",
+   "id": "407498be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6234,7 +6234,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "11c6d4da",
+   "id": "97eafe84",
    "metadata": {},
    "outputs": [
     {
@@ -6336,7 +6336,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "7e3498a7",
+   "id": "bdf73ed9",
    "metadata": {},
    "outputs": [
     {
@@ -6440,8 +6440,214 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 133,
+   "id": "03f2fded",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "f3ceac93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "6fb6bfbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "afa9720b",
+   "id": "65eac81f",
    "metadata": {},
    "outputs": [],
    "source": []
